--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   google_fonts: ^5.1.0
   font_awesome_flutter: ^10.5.0
   simple_gradient_text: ^1.3.0
+  lottie: ^2.6.0
+  
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -64,7 +66,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/icons/  
+    - assets/icons/
+    - assets/animation/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
