--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   google_maps_flutter: ^2.5.0
   shared_preferences: ^2.2.2
   sqflite: ^2.3.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  permission_handler: ^11.0.1
   
 
 
