--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   permission_handler: ^11.0.1
+  get: ^4.6.6
+  email_validator: ^2.1.17
   
 
 
@@ -55,6 +57,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.6
   
 
   # The "flutter_lints" package below contains a set of recommended lints to
