--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   permission_handler: ^11.0.1
   get: ^4.6.6
   email_validator: ^2.1.17
+  firebase_core: ^2.22.0
+  firebase_auth: ^4.13.0
+  firebase_messaging: ^14.7.4
+  intl_phone_field: ^3.2.0
   
 
 
@@ -59,6 +63,7 @@ dev_dependencies:
     sdk: flutter
   hive_generator: ^2.0.1
   build_runner: ^2.4.6
+  change_app_package_name: ^1.1.0
   
 
   # The "flutter_lints" package below contains a set of recommended lints to
